# tomex

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  STORYGRAPH.md  flake.nix  test.csv
.github/workflows/: rust.yml
src/: backup.rs  config.rs  default_colors.rs  export.rs  lib.rs  traits.rs  types.rs
src/derives/: Cargo.toml
src/derives/src/: lib.rs
src/types/: author.rs  binding.rs  book.rs  book_author.rs  book_genre.rs  edition.rs  edition_review.rs  format.rs  genre.rs  identifier.rs  isbn.rs  language.rs  mod.rs  mood.rs  option_to_create.rs  pace.rs  price.rs  progress.rs  publisher.rs  rating.rs  review.rs  series.rs  text.rs  timestamp.rs  uuid.rs
src/types/junction_tables/: book_author.rs  book_genre.rs  edition_language.rs  edition_publisher.rs  mod.rs  review_mood.rs
tests/: types.rs
