[package]
name = "bokhylle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bokhylle"
path = "src/bin/cli/main.rs"

[profile.release]
codegen-units = 1 
lto = true    
strip = true  

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
chrono-humanize = "0.2.2"
clap = "4.0.32"
const_format = "0.2.30"
crossterm = "0.25.0"
derives = { version = "0.1.0", path = "src/derives" }
dotenvy = "0.15.6"
inquire = { version = "0.5.2", features = ["date"] }
reedline = "0.14.0"
shlex = "1.1.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "sqlite", "macros", "chrono", "offline"] }
tokio = { version = "1.23.0", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
