[package]
name = "tomex"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tomex"
path = "src/bin/cli/main.rs"

[profile.release]
codegen-units = 1 
lto = true    
strip = true  

[dependencies]
anyhow = "1.0.68"
axum = "0.6.2"
chrono = { version = "0.4.23", features = ["serde"] }
chrono-humanize = "0.2.2"
clap = "4.0.32"
const_format = "0.2.30"
crossterm = { version = "0.25.0", features = ["serde"] }
dateparser = "0.1.7"
derives = { version = "0.1.0", path = "src/derives" }
dotenvy = "0.15.6"
figment = { version = "0.10.8", features = ["yaml", "toml", "env"] }
inquire = { version = "0.5.2", features = ["date", "editor"] }
isbn2 = "0.4.0"
liquidity_check = "0.1.0"
reedline = "0.14.0"
reqwest = { version = "0.11.13", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
shlex = "1.1.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "sqlite", "macros", "chrono", "offline"] }
tokio = { version = "1.23.0", features = ["full"] }
toml = "0.5.10"
uuid = { version = "1.2.2", features = ["v4", "serde"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
