[package]
name = "tomex"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tomex"
path = "src/bin/cli/main.rs"

[profile.release]
codegen-units = 1 
lto = true    
strip = true  

[dependencies]
anyhow = "1.0.70"
axum = "0.6.12"
chrono = { version = "0.4.24", features = ["serde"] }
chrono-humanize = "0.2.2"
clap = "4.2.1"
const_format = "0.2.30"
crossterm = { version = "0.25.0", features = ["serde"] }
csv = "1.2.1"
dateparser = "0.1.8"
derives = { version = "0.1.0", path = "src/derives" }
dotenvy = "0.15.7"
figment = { version = "0.10.8", features = ["yaml", "toml", "env"] }
inquire = { version = "0.5.3", features = ["date", "editor"] }
isbn2 = "0.4.0"
liquidity_check = "0.1.0"
local-ip-address = "0.5.1"
reedline = "0.14.0"
reqwest = { version = "0.11.16", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_path_to_error = "0.1.11"
shellexpand = { version = "3.1.0", features = ["path"] }
shlex = "1.1.0"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "sqlite", "macros", "chrono", "offline"] }
tokio = { version = "1.27.0", features = ["full"] }
toml = "0.5.11"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.0", features = ["v4", "serde"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
